--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <h1>Men's Mental Health Awareness</h1>
 
-  <p><strong>Men's mental health is a critical but often overlooked issue.</strong> Many men feel pressured to stay silent about their emotions, leading to untreated conditions and serious consequences. <em>Raising awareness</em> and encouraging support can help break the stigma and promote well-being.</p>
+<p><strong>Men's mental health is a critical but often overlooked issue.</strong> Many men feel pressured to stay silent about their emotions due to societal expectations that equate masculinity with strength, toughness, and emotional restraint. This stigma can prevent them from seeking help when they need it most, resulting in untreated conditions such as depression, anxiety, and substance abuse. <em>Raising awareness</em> and promoting open conversations can help normalize mental health struggles and empower men to prioritize their well-being. Support from friends, family, and mental health professionals plays a vital role in breaking down these barriers. By fostering a culture that encourages emotional honesty and mental self-care, we can help men lead healthier, more fulfilling lives.</p>
 
   <h2>Common Mental Health Issues Among Men</h2>
   <ul>
